[package]
name = "rust_recon"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
trust-dns-resolver = "0.22"
url = "2.4.0"
whois-rust = "1.6.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }



